dev_ws/log/build_2023-11-01_10-27-52/py_img_stream/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/media/sf_sdp_12_ws/dev_ws/install/py_img_stream/lib/python3.10/site-packages/py_img_stream/image_pub.py", line 82
    else:
    ^^^^
SyntaxError: invalid syntax

